Refactor SQLQuery